docker/predict/.k8s/overlays/prod/patch-deployment-elasticsearch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
          resources:
            requests:
              cpu: 1000m
              memory: 2048Mi
            limits:
              cpu: 8000m
              memory: 8192Mi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
