docker/predict/.k8s/overlays/prod/patch-deployment-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: w255mids.azurecr.io/edbrown/capstone:frontend
          resources:
            requests:
              cpu: 1000m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /gotmeals/_stcore/health
              port: 8501
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /gotmeals/_stcore/health
              port: 8501
            initialDelaySeconds: 15
            periodSeconds: 20
