docker/predict/.k8s/overlays/prod/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: lab4
spec:
  hosts:
    - edbrown.mids255.com
  gateways:
    - istio-ingress/edbrown-gateway
  http:
    - match:
        - uri:
            exact: /predict
        - uri:
            prefix: /health
        - uri:
            prefix: /docs
        - uri:
            prefix: /openapi.json
        - uri:
            prefix: /version
      route:
        - destination:
            host: lab4
            port:
              number: 8888
    - match: 
        - uri:
            prefix: /es
      route:
        - destination:
            host: elasticsearch
            port:
              number: 9200
